feat : period report
